@@ -1,3 +1,18 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.powermock.modules.testng;
 
 import java.lang.reflect.Constructor;
@@ -12,6 +27,7 @@ import org.powermock.core.transformers.impl.MainMockTransformer;
 import org.powermock.modules.testng.internal.PowerMockTestNGMethodHandler;
 import org.powermock.modules.testng.internal.TestNGMethodFilter;
 import org.powermock.reflect.Whitebox;
+import org.powermock.reflect.proxyframework.RegisterProxyFramework;
 import org.powermock.tests.utils.IgnorePackagesExtractor;
 import org.powermock.tests.utils.TestClassesExtractor;
 import org.powermock.tests.utils.impl.MockPolicyInitializerImpl;
@@ -47,6 +63,7 @@ public class PowerMockObjectFactory implements IObjectFactory {
         mockLoader.addIgnorePackage(ignorePackagesExtractor.getPackagesToIgnore(testClass));
         mockLoader.addClassesToModify(testClassesExtractor.getTestClasses(testClass));
         mockLoader.addClassesToModify(testClass.getName());
+        registerProxyframework(mockLoader);
         new MockPolicyInitializerImpl(testClass).initialize(mockLoader);
         try {
             final Class<?> testClassLoadedByMockedClassLoader = createTestClassStateCleanupProxy(testClass);
@@ -85,4 +102,30 @@ public class PowerMockObjectFactory implements IObjectFactory {
         Class<?> c = Whitebox.<Class<?>> invokeMethod(f, "createClass");
         return c;
     }
+
+    private void registerProxyframework(ClassLoader classLoader) {
+        Class<?> proxyFrameworkClass = null;
+        try {
+            proxyFrameworkClass = Class.forName("org.powermock.api.extension.proxyframework.ProxyFrameworkImpl", false, classLoader);
+        } catch (ClassNotFoundException e) {
+            throw new IllegalStateException(
+                    "Extension API internal error: org.powermock.api.extension.proxyframework.ProxyFrameworkImpl could not be located in classpath.");
+        }
+
+        Class<?> proxyFrameworkRegistrar = null;
+        try {
+            proxyFrameworkRegistrar = Class.forName(RegisterProxyFramework.class.getName(), false, classLoader);
+        } catch (ClassNotFoundException e) {
+            // Should never happen
+            throw new RuntimeException(e);
+        }
+        try {
+            Whitebox.invokeMethod(proxyFrameworkRegistrar, "registerProxyFramework", Whitebox.newInstance(proxyFrameworkClass));
+        } catch (RuntimeException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
 }
